--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+.card-1 {
+  border-radius: 10px;
+  border: 2px solid #f53838;
+  background: #fff;
+  padding: 30px;
+  height: 100%;
+  /* margin-right: 50px; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.max-w-340 {
+  max-width: 340px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.slick-list {
+  overflow: visible !important;
+  position: relative;
+  z-index: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.slick-track {
+  display: flex !important;
+  gap: 20px;
+}
+
+.slick-slide {
+  height: inherit !important;
+  display: flex !important;
+}
+
+/* .slick-slide > div {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}  */
+
+/* .slick-list::after {
+  content: " ";
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  width: 4000px;
+  right: 101%;
+  background-color: white;
+} */
+
+.vizard {
+  color: #0b132a;
+  text-align: center;
+  font-family: "Rubik", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.warsa {
+  color: #0b132a;
+  font-family: "Rubik" sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rating {
+  color: #0b132a;
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.para1 {
+  color: #0b132a;
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+ul {
+  padding-left: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+p {
+  margin-bottom: 0 !important;
+}
+
+h2 {
+  margin-bottom: 0 !important;
+}
+
+.mycontainer {
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
 }
